# ASTRA_Autogen

./: .gitignore  ASTRA_Phases.md  README.md  agents.py  auth_tools.py  main.py  pyproject.toml  runners.py  utils.py
agents/: agents.py
embeddings/: tools_embedding.py
mcp/: auth_tools.py  mongo_db.py
policies/: demo_policy.rego  policy.rego  testcases.md
utils/: check.py  demo.py  opa.py  runners.py  utils.py
